# K-Search

./: .gitignore  CLAUDE.md  TEST_OPTIMIZED.md  generate_kernels_and_eval.py  pyproject.toml  run_search_v2.py
docs/: HANDOFF-simple-linear-executor.md  generator_comparison.md  llm-api-usage.md  llm-info-routing.md  paper-to-code-mapping.md  search-configuration.md  world-model-system.md
docs/impls/: 2025-03-05-parsing-formatting-impl.md
docs/plans/: 2026-03-03-causal-conv-simplification-design.md  2026-03-03-causal-conv-simplification-implementation.md  2026-03-04-implementation-protocol.md  2026-03-04-incremental-implementation-design.md  2026-03-04-minimal-v2-search-loop-design.md  2026-03-04-search-v2-design.md  2026-03-04-task-framework-design.md  2026-03-04-task-framework-extensions.md  2026-03-04-task-framework-north-star.md  2026-03-04-wandb-integration-design.md  2026-03-05-llm-cycle-feedback-design.md  2026-03-05-modular-restructure-design.md  2026-03-05-parallel-executor-design.md  2026-03-05-tree-data-model-design.md  2026-03-05-typed-annotations-design.md  2026-03-06-llm-world-model-design.md  2026-03-06-span-and-timer.md  2026-03-06-span-design.md  2026-03-06-typed-annotation-consumers-design.md  2026-03-07-model-endpoints-design.md  2026-03-09-async-pipeline-executor-design.md  2026-03-09-async-pipeline-executor.md  2026-03-09-colored-logging-design.md  2026-03-09-colored-logging.md  2026-03-09-modular-v1-refactor-design.md  2026-03-09-modular-v1-refactor.md  2026-03-09-trivial-test-cleanup-design.md  2026-03-09-trivial-test-cleanup.md  2026-03-09-v1-case-search-design.md  2026-03-09-v1-case-search-impl.md  2026-03-09-v1-feedback-parity-design.md  2026-03-10-node-tree-subclassing-impl.md  2026-03-10-node-tree-subclassing-refactor.md  2026-03-10-v2-modular-k-search-design.md  2026-03-12-node-tree-simplification-design.md  2026-03-12-node-tree-simplification-impl.md  2026-03-12-wandb-artifact-migration-design.md  2026-03-12-wandb-artifact-migration-plan.md  parsing-formatting-layer.md
k_search/: __init__.py
tests/: conftest.py  test_causal_conv1d_integration.py  test_causal_conv1d_spec.py  test_custom_triton.py  test_gpu_mode_causal_conv1d.py  test_gpu_mode_moe.py  test_gpu_mode_reference_benchmark.py  test_kernel_generator.py  test_world_model_llm_integration.py
(+175 files in other folders)
